# Z7

./: .clang-format  .gitignore  BitFieldProxy.h  CMakeLists.txt  README.md  library.cpp  library.h  tests.cpp  util.h
benchmarks/: CMakeLists.txt  benchmarks.cpp
tests/: CMakeLists.txt  neighbors.cpp  tests.cpp  util.cpp
